<resources>
    <string name="app_name">My-Fast-on-track-news-app</string>
    <string name="app_logo">App Logo</string>
    <string name="logo_desc">App Logo</string>

    <!-- Sign Up Screen Strings -->
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_email">E-mail</string>
    <string name="signup_remember">Remember Username</string>
    <string name="signup_button">Sign up</string>
</resources>
